fixing copy details (adding date) and fixing aligning if table

--- a/packages/coordinator/src/components/Table/GroupTable.module.scss
+++ b/packages/coordinator/src/components/Table/GroupTable.module.scss
@@ -35,12 +35,17 @@
 .cell {
   display: flex;
   flex: 1 0 0;
-  justify-content: center;
+  justify-content: right;
   padding: 0 1rem;
+}
+
+.buttons-cell{
+  justify-content: left;
 }
 
 .header-cell {
   cursor: pointer;
+  justify-content: center;
 
   &:hover {
     font-weight: bold;
@@ -51,3 +56,4 @@
   font-weight: bold;
   color: var(--color-primary);
 }
+
